Name:                legacy-data-loader
Version:             0.1
Synopsis:            Custom tool for transferring data from files to database.
License:             PublicDomain
Author:              Max Taldykin
Maintainer:          max@formalmethods.ru

Category:            Database
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Executable ldl
  Main-is:           ldl.hs
  
  Build-depends:     base, time, old-locale
                    ,containers, bytestring, utf8-string, text
                    ,enumerator
                    ,csv-enumerator == 0.10.*
                    ,aeson == 0.6.*
                    ,hedis == 0.3.*
  
  
executable hmset-poster
  main-is:              hmset-poster.hs
  build-depends:
    base                == 4.*,
    filepath            == 1.3.*,
    cmdargs             == 0.9.*,
    csv-enumerator      == 0.10.*,
    hedis               == 0.4.*,
    snaplet-redson      == 0.1.*,
    time                == 1.4.*,
    transformers        == 0.2.*
