name:                psa-vin-importer
version:             0.1.0.0
synopsis:            PSA VIN bulk importer for CaRMa
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          <dima@dzhus.org>
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.8

executable psa-vin-importer
  hs-source-dirs: src
  main-is: Main.hs

--  Other-modules:       

  Build-depends:       
    base              == 4.6.*,
    bytestring        == 0.10.*,
    conduit           == 1.0.*,
    csv-conduit       == 0.5.*,
    postgresql-simple >= 0.3.4 && < 0.4,
    temporary         == 1.1.*