name:                sagai-exporter
version:             0.1.0.0
synopsis:            SAGAI integration facilities for CaRMa
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8


executable sagai-exporter
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:
        Carma.SAGAI
        Carma.SAGAI.Error
        Carma.SAGAI.Util

  build-depends:
    aeson        == 0.6.*,
    bytestring   == 0.10.*,
    base         == 4.6.*,
    carma-dict   == 0.1.*,
    carma-http   == 0.1.*,
    containers   == 0.5.*,
    old-locale   == 1.0.*,
    time         == 1.4.*,
    transformers == 0.3.*
  