name:                vinnie
version:             0.3.1
synopsis:            VINNIE Is a New Nice Importer Engine
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dmitry@formalmethods.ru
category:            Database

build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

library
  exposed-modules:
    Carma.VIN

  other-modules:
    Carma.VIN.Base
    Carma.VIN.SQL

  build-depends:
    aeson             >= 0.6 && < 0.8,
    attoparsec-conduit== 1.1.*,
    base              >= 4.6 && < 4.8,
    blaze-builder     == 0.3.*,
    bytestring        == 0.10.*,
    carma-models      >= 0.16 && < 0.23,
    conduit           >= 1.0 && < 1.2,
    conduit-extra     == 1.1.*,
    containers        == 0.5.*,
    csv-conduit       == 0.6.*,
    lifted-base       == 0.2.*,
    monad-control     == 0.3.*,
    postgresql-simple == 0.3.*,
    text              >= 0.11 && < 1.2,
    text-icu          == 0.6.*,
    transformers      >= 0.3 && < 0.5,
    vector            == 0.10.*

  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010


executable vinnie
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Carma.VIN

  build-depends:
    aeson             >= 0.6 && < 0.8,
    attoparsec-conduit== 1.1.*,
    base              >= 4.6 && < 4.8,
    blaze-builder     == 0.3.*,
    bytestring        == 0.10.*,
    carma-models      >= 0.16 && < 0.23,
    cmdargs           == 0.10.*,
    conduit           >= 1.0 && < 1.2,
    conduit-extra     == 1.1.*,
    containers        == 0.5.*,
    csv-conduit       == 0.6.*,
    lifted-base       == 0.2.*,
    monad-control     == 0.3.*,
    postgresql-simple == 0.3.*,
    text              >= 0.11 && < 1.2,
    text-icu          == 0.6.*,
    transformers      >= 0.3 && < 0.5,
    vector            == 0.10.*

  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
