name:                vinnie
version:             0.3.3.1
synopsis:            VINNIE Is a New Nice Importer Engine
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dmitry@formalmethods.ru
category:            Database

build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.8.3

library
  exposed-modules:
    Carma.VIN

  other-modules:
    Carma.VIN.Base
    Carma.VIN.SQL

  build-depends:
    aeson             >= 0.6 && < 0.9,
    attoparsec-conduit== 1.1.*,
    base              >= 4.6 && < 4.8,
    blaze-builder     == 0.3.*,
    bytestring        == 0.10.*,
    carma-models      >= 0.24.14 && < 0.33,
    conduit           >= 1.0 && < 1.3,
    conduit-extra     == 1.1.*,
    containers        == 0.5.*,
    csv-conduit       == 0.6.*,
    filepath          == 1.3.*,
    lifted-base       == 0.2.*,
    monad-control     >= 0.3 && < 1.1,
    postgresql-simple >= 0.4.4.1 && < 0.5,
    text              >= 0.11 && < 1.3,
    text-icu          >= 0.6 && < 0.8,
    transformers      >= 0.4 && < 0.5,
    vector            == 0.10.*

  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010


executable vinnie
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Carma.VIN

  build-depends:
    aeson             >= 0.6 && < 0.9,
    attoparsec-conduit== 1.1.*,
    base              >= 4.6 && < 4.8,
    blaze-builder     == 0.3.*,
    bytestring        == 0.10.*,
    carma-models      >= 0.24.14 && < 0.33,
    cmdargs           == 0.10.*,
    conduit           >= 1.0 && < 1.3,
    conduit-extra     == 1.1.*,
    containers        == 0.5.*,
    csv-conduit       == 0.6.*,
    filepath          == 1.3.*,
    lifted-base       == 0.2.*,
    monad-control     >= 0.3 && < 1.1,
    postgresql-simple >= 0.4.4.1 && < 0.5,
    text              >= 0.11 && < 1.3,
    text-icu          >= 0.6 && < 0.8,
    transformers      >= 0.4 && < 0.5,
    vector            == 0.10.*

  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
