name:                vinnie
version:             0.3.3.1
synopsis:            VINNIE Is a New Nice Importer Engine
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dmitry@formalmethods.ru
category:            Database

build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  exposed-modules:
    Carma.VIN

  other-modules:
    Carma.VIN.Base
    Carma.VIN.SQL

  build-depends:
      aeson
    , attoparsec-conduit
    , base
    , blaze-builder
    , bytestring
    , carma-models
    , conduit
    , conduit-extra
    , containers
    , csv-conduit
    , filepath
    , lifted-base
    , monad-control
    , postgresql-simple
    , text
    , text-icu
    , transformers
    , vector

  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010


executable vinnie
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Carma.VIN

  build-depends:
      aeson
    , attoparsec-conduit
    , base
    , blaze-builder
    , bytestring
    , carma-models
    , cmdargs
    , conduit
    , conduit-extra
    , containers
    , csv-conduit
    , filepath
    , lifted-base
    , monad-control
    , postgresql-simple
    , text
    , text-icu
    , transformers
    , vector

  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
